| Bug #17928 | testBackup fails in error handling testcases | ||
|---|---|---|---|
| Submitted: | 5 Mar 2006 10:46 | Modified: | 3 Jul 2006 15:36 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Stewart Smith | CPU Architecture: | Any |
[5 Mar 2006 10:46]
Jonas Oreland
[19 May 2006 8:20]
Jonas Oreland
Needs to be fixed before GA
[13 Jun 2006 14:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7570
[29 Jun 2006 12:39]
Stewart Smith
approved by jonas. pushed to 5.1 team tree.
[29 Jun 2006 20:09]
Tomas Ulin
pushed to 5.1.12
[3 Jul 2006 15:36]
Jon Stephens
Does not appear to be anything to document for end users. Closed.
